# h1b-service

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  PLAN.md  Procfile  README.md  app.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  etl.yml
app/: auth.py  config.py  db.py  email.py  landing.html  lookup.py  main.py  quotas.py  signal.py
docs/: deploy.md  future-considerations.md
docs/adr/: 0001-data-ships-with-app-user-data-in-postgres.md  0002-entity-resolution-ceiling-marquee-correct.md  0003-partial-single-source-response-state.md  0004-dol-uscis-vintage-skew.md
docs/superpowers/plans/: 2026-07-07-new-h1b-vs-transfers.md  2026-07-08-entity-resolution.md
docs/superpowers/specs/: 2026-07-07-new-h1b-vs-transfers-design.md  2026-07-08-entity-resolution-design.md
etl/: aliases.csv  aliases.py  build.py  canonicalize.py  column_maps.py  download.py  manifest.json  sources.py
scripts/: build_data.py  build_from_dol_visas.py  build_manifest.py  generate_alias_worksheet.py  heroku_bootstrap.py  report_normalization_collisions.py  smoke.py  validate_uscis_subset.py
tests/: conftest.py  test_api.py  test_canonicalize.py  test_e2e.py  test_etl.py  test_known_sponsors.py  test_lookup.py  test_real_etl.py  test_signal.py  test_testmail_e2e.py
tests/fixtures/: dol_FY2024_Q4.xlsx  dol_FY2025_Q4.xlsx  generate_fixtures.py  uscis_fy2025.csv
tests/fixtures/real/: README.md
